Fix slideshow z-index

--- a/css/component.css
+++ b/css/component.css
@@ -73,7 +73,7 @@
 	height: 100%;
 	top: 0;
 	left: 0;
-	z-index: 500;
+	z-index: 2000;
 	opacity: 0;
 	visibility: hidden;
 	overflow: hidden;
